Fix gradient on safari

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -284,7 +284,7 @@ a#bottom-nav{
       top: 0; right: 0;
       height: 100%;
       width: $spacing-unit*6;
-      background-image: linear-gradient(to right, transparent, $grey-color-light, $grey-color-light);
+      background-image: linear-gradient(to right, rgba(248, 247, 247, 0), #f7f7f7, #f7f7f7);
       opacity: 0;
       -webkit-transition: opacity 0.2s ease;
       transition: opacity 0.2s ease;
